# wp-agent-tool

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: basic-usage.md  creating-releases.md  features.md  installation.md
scripts/: install.sh
src/: cli.rs  main.rs  report.rs  wp.rs
src/diagnosis/: database.rs  maintenance.rs  mod.rs  network.rs  performance.rs  plugins.rs  security.rs  system.rs
