[package]
name = "wp-agent"
version = "0.1.6"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
console = "0.16"
dialoguer = "0.12"
sysinfo = "0.30"
which = "8.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
colored = "3.1"
libc = "0.2"
